--- a/HTML/index copy.html
+++ b/HTML/index copy.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>HÁ, GAYYYYYYYY!</h1>
-    <br>
-    <!--dqdqddq-->
-    <img src="/HTML/images/aula001.jpeg" width="420" alt="pexels">
+    <img src="/HTML/Captura de Tela (64).png" alt="Captura de Tela (64)">
+    <p>
+
+    </p>
+    <img src="/HTML/aula001.jpeg" width="420" alt="pexels">
 </body>
 </html>
