--- a/HTML/index copy.html
+++ b/HTML/index copy.html
@@ -7,11 +7,5 @@
     <title>first webpage</title>
 </head>
 <body>
-    <h1>HÁ, GAYYYYYYYY!</h1>
-    <img src="/HTML/Captura de Tela (64).png" alt="Captura de Tela (64)">
-    <p>
-
-    </p>
-    <img src="/HTML/aula001.jpeg" width="420" alt="pexels">
-</body>
+    sssg
 </html>
