--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,8 +8,61 @@
 </head>
 <body>
     <h1>HÁ, GAYYYYYYYY!</h1>
+    <ul>
+        <li>
+            assim se faz <sup>alto</sup> uma lista <sub>baixo</sub>
+            <strong>negrito</strong>
+        </li>
+        <li>
+            <a href="https://ide.cs50.io/e75f9e2d20754b7991c1c749bba213d1">teste link em texto</a> &COPY;
+        </li>
+        <ol>
+            <li>
+                numer
+            </li>
+            <!--identado!!!-->
+        </ol>
+    </ul>
+    <tr>
+        <th>teste</th>
+        <th>teste</th>
+        <th>teste</th>
+    </tr>
     <br>
-    <!--dqdqddq-->
+    <tr>
+        <th>liste</th>
+        <th>seus</th>
+        <th>objetos</th>
+    </tr>
+    <br>
+    <form action="">
+        <label for="name">first name</label>
+        <input type="text" name="name" id="name">
+        <input type="email" name="" id="" value="email@email">
+        <!--<button type="submit">submit</button>-->
+        <input type="password" placeholder="senha">
+        <br>
+        <input type="submit">
+
+
+    </form>
+    <br>
+    <!--imagem, favor redimensionar por fora, para poupar a internet do amiguinho-->
     <img src="/HTML/images/aula001.jpeg" width="420" alt="pexels">
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <br>
+    <p>Veja</p>
+    <input type="radio">Java
+    <input type="radio">valores
+    <input type="radio">em todos
+    <input type="radio">os cantos
+    <br>
+    <input type="checkbox" checked>testando checkbox
+    <input type="checkbox" >testand0
+    <br>
+    <select name="langueges" id="">
+        <option value="valor1">valor1</option>
+        <option value="valor2">valor2</option>
+    </select>
 </body>
 </html>
