--- a/HTML/Projects/ex001.html
+++ b/HTML/Projects/ex001.html
@@ -7,7 +7,13 @@
     <title>Coffee Junkie</title>
 </head>
 <body>
+
     <h1>Coffee Junkie</h1>
-    
+    <li> <a href="http://">Home</a> </li>
+    <li> <a href="http://">About</a> </li>
+    <li> <a href="http://">Numbers</a> </li>
+    <li> <a href="http://">Contact</a> </li>
+    <br>
+    <img src="/HTML/images/graos.jpg" alt="graos">
 </body>
 </html>
