--- a/HTML/Projects/ex001.html
+++ b/HTML/Projects/ex001.html
@@ -7,13 +7,48 @@
     <title>Coffee Junkie</title>
 </head>
 <body>
-
+    <img src="/HTML/images/coffee logo.png" id="logo" alt="cafezinho">
     <h1>Coffee Junkie</h1>
-    <li> <a href="http://">Home</a> </li>
-    <li> <a href="http://">About</a> </li>
-    <li> <a href="http://">Numbers</a> </li>
-    <li> <a href="http://">Contact</a> </li>
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a href="index.html">About</a> </li>
+    <li> <a href="index.html">Numbers</a> </li>
+    <li> <a href="index.html">Contact</a> </li>
     <br>
-    <img src="/HTML/images/graos.jpg" alt="graos">
+    <img src="/HTML/images/graos.jpg" width="100%" alt="graos"> 
+    <h1>Featured Products</h1>
+    <br>
+
+    <h2>House Blend Cofee</h2>
+    <br>
+    <p style="width: 50%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam doloribus illo sequi praesentium accusantium molestiae, excepturi tenetur, veniam nemo quaerat nisi laudantium eveniet sapiente! Minima sint fugiat asperiores? Ipsa, corporis.</p>
+    <h3><a href="http://www.wikipedia.org/" target="_blank">Details</a></h3>
+    <br>
+
+    <h2>French Roast</h2>
+    <br>
+    <p style="width: 50%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam doloribus illo sequi praesentium
+        accusantium molestiae, excepturi tenetur, veniam nemo quaerat nisi laudantium eveniet sapiente! Minima sint fugiat
+        asperiores? Ipsa, corporis.</p>
+    <h3><a href="http://www.wikipedia.org/" target="_blank">Details</a></h3>
+    <br>
+
+    <h2>Colombian Roast</h2>
+    <br>
+    <p style="width: 50%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam doloribus illo sequi praesentium
+        accusantium molestiae, excepturi tenetur, veniam nemo quaerat nisi laudantium eveniet sapiente! Minima sint fugiat
+        asperiores? Ipsa, corporis.</p>
+    <h3><a href="http://www.wikipedia.org/" target="_blank">Details</a></h3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3><a href="#logo">Back to the Top</a></h3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    copyright&copy;2021
 </body>
-</html>
+</html>    
