--- a/HTML/Projects/ex001.html
+++ b/HTML/Projects/ex001.html
@@ -10,7 +10,7 @@
     <img src="/HTML/images/coffee logo.png" id="logo" alt="cafezinho">
     <h1>Coffee Junkie</h1>
     <li> <a href="index.html">Home</a> </li>
-    <li> <a href="index.html">About</a> </li>
+    <li> <a href="/HTML/Projects/ex001 about.html">About</a> </li>
     <li> <a href="index.html">Numbers</a> </li>
     <li> <a href="index.html">Contact</a> </li>
     <br>
