--- a/CSS/new/bazinga.html
+++ b/CSS/new/bazinga.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarginAnd others</title>
-    <link rel="style.css" href="style.css">
+    <title>MarginAndOthers</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>
+        Hello ET's and other creatures
+    </h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, minus sit iste id facere inventore? Voluptate officia a pariatur nisi consequatur corrupti ipsa porro veniam, autem id numquam error accusantium!
+    </p>
 </body>
 </html>
